--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "joi-password": "^4.2.0",
     "joi-phone-number": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "moment": "^2.30.1",
+    "morgan": "^1.10.0",
+    "nodemailer": "^7.0.3",
+    "short-unique-id": "^5.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
@@ -35,6 +38,7 @@
     "@types/joi-phone-number": "^5.0.8",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
+    "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.10",
     "prisma": "^6.8.2",
     "ts-node-dev": "^2.0.0",
