--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.8.2",
     "bcryptjs": "^3.0.2",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
@@ -33,10 +34,12 @@
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
     "@types/colors": "^1.2.4",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/joi-phone-number": "^5.0.8",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.21",
     "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.10",
